# agent-mr-reviewer

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/agent_mr_reviewer/: __main__.py  cli.py  diff_parser.py  gitlab_client.py  llm_client.py  llm_review.py  llm_summary.py  review_rules.py  reviewer.py
