[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-mr-reviewer"
version = "0.1.0"
description = "Agent MR reviewer for GitLab"
requires-python = ">=3.9"
dependencies = [
  "requests==2.32.3",
  "tiktoken==0.7.0",
  "unidiff==0.7.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
